--- a/style.css
+++ b/style.css
@@ -22,10 +22,6 @@ nav {
 
 
 
-nav > a > img {
- 
-}
-
 
  nav li {
     margin-left: 50px;
@@ -44,17 +40,11 @@ nav > a > img {
 
 }
 
-.top-left {
-    width: 30%;
-}
-
-.top-center {
-    width: 40%;
-}
-
 .top-right {
-    width: 30%;
+ 
     align-items: center;
+    display: flex;
+    
 
 
 }
